# 3dptv

./: .gitattributes  .gitignore  3dptv.vcproj  CMakeLists.txt  Copy of ptv.tcl  INSTALL  INSTALL.rst  README  README.md  ScanPTV.vcproj  index  index.txt  install_nix.md  install_nix.rst  license.txt  old_ETH_license_copy.txt  ptv.tcl  ptv.tcl.bak  ptvunix.tcl  start  tclIndex  tclIndex.txt
3dptv_vc2008/: 3dptv.sln
3dptv_vc2008/3dptv_vc2008/: 3dptv.vcproj
3dptv_vc2010/: 3dptv_vc2010.sln
3dptv_vc2010/3dptv_vc2010/: 3dptv_vc2010.vcxproj  3dptv_vc2010.vcxproj.filters  ReadMe.txt  stdafx.cpp
3dptv_vc2014/: ScanPTV.sln
3dptv_vc2014/3dptv_vc2014/: ScanPTV.vcproj  ScanPTV.vcxproj  stdafx.cpp  (+1 more)
docs/: Scan_PTV_outline.docx
matlab/: detection_proc_matlab.m  detection_proc_matlab_db.m  divide_rename_cal_mic_following_rklaus.m  license.txt  safl_split_rename_Insight_image.m  write_targets.m
parameters/: cal_ori.par  criteria.par  detect_plate.par  dumbbell.par  examine.par  man_ori.par  multi_planes.par  orient.par  ptv.par  sequence.par  shaking.par  sortgrid.par  targ_rec.par  track.par
post_ptv_scanning/: input.inp  input_41.txt  post_process.cpp  post_process.vcproj  post_process.vcxproj  post_process.vcxproj.filters  readme.txt  stdafx.cpp  stdafx.h
src_c/: CMakeLists.txt  Copy of orientation.c  ReadMe.txt.rej  ScanPTV.cpp  ScanPTV.rc  ScanPTV.sln  ScanPTV.vcproj  ScanPTV1.aps  ScanPTV1.rc  ScanPTV2.aps  ScanPTV2.rc  TextFile32.txt  al_homemakefile.mak  al_homemakefile.mak.bak  change_parameter.c  change_parameterOld.c  checkpoints.c  correspondences.c  correspondences.c.orig  correspondences.c.rej  demo.c  dir.patch  dir.patch.orig  draw.c  epi.c  epi.c.orig  epi.c.rej  globals.h  homemakefile  homemakefile.mak  homemakefile.mak.bak  image_processing.c  imgcoord.c  intersect.c  intersect.c.rej  jw_ImgFmtTIF.c  jw_ImgFmtTIF.c.rej  jw_main.c  jw_maina.c  jw_ptv.c  (+45 more)
src_c/New Folder/: change_parameter.c  correspondences.c  demo.c  epi.c  globals.h  jw_ptv.c  orientation.c  pointpos.c  ptv.c  sortgrid.c  track.c
src_c/poly/: checkpoints_poly.c  nrutil.c  nrutil.h  poly_fit.c  poly_ptv.c  poly_shaking.c
src_c/tmp/: change_parameter.c  demo.c  epi.c  imgcoord.c  jw_ImgFmtTIF.c  jw_main.c  libtiff.lib  multimed.c  peakfitting.c  pointpos.c  ptv.c  ptv.h  resource2.h  rotation.c  tcl.h  tiff.h  tiffio.h  ttools.c  vrml.c  vrml2.c
src_tcl/: body_calpar.tcl  button.tcl  calpar.tcl  display.tcl  draw.tcl  mainpar.tcl  mainpoly.tcl  multi_calpar.tcl  ptv_menu.tcl  trackpar.tcl
test/: addpar.raw  dt_lsq  raw0.ori  raw1.ori  raw2.ori  raw3.ori  safety_0.ori  safety_1.ori  safety_2.ori  safety_3.ori  start.bat
(+357 files in other folders)
